--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.csv
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -18,6 +19,7 @@
 [Xx]64/
 [Xx]86/
 [Bb]uild/
+Weights/
 bld/
 [Bb]in/
 [Oo]bj/
